// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecretsDirectoryService should automatically toggle all nodes 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": undefined,
          "name": "some-secret",
          "path": "codecentric/some-secret",
          "toggled": true,
        },
        {
          "children": [
            {
              "children": undefined,
              "name": "something",
              "path": "codecentric/common/something",
              "toggled": true,
            },
            {
              "children": undefined,
              "name": "another-thing",
              "path": "codecentric/common/another-thing",
              "toggled": true,
            },
          ],
          "name": "common",
          "path": "codecentric/common",
          "toggled": true,
        },
        {
          "children": [
            {
              "children": undefined,
              "name": "user",
              "path": "codecentric/db/user",
              "toggled": true,
            },
            {
              "children": undefined,
              "name": "password",
              "path": "codecentric/db/password",
              "toggled": true,
            },
          ],
          "name": "db",
          "path": "codecentric/db",
          "toggled": true,
        },
      ],
      "name": "codecentric",
      "path": "codecentric",
      "toggled": true,
    },
  ],
  "name": "Stores",
  "path": "",
  "toggled": true,
}
`;

exports[`SecretsDirectoryService should preserve previously toggled nodes when building a new tree 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": undefined,
          "name": "some-secret",
          "path": "codecentric/some-secret",
          "toggled": false,
        },
        {
          "children": [
            {
              "children": undefined,
              "name": "something",
              "path": "codecentric/common/something",
              "toggled": false,
            },
            {
              "children": undefined,
              "name": "another-thing",
              "path": "codecentric/common/another-thing",
              "toggled": false,
            },
          ],
          "name": "common",
          "path": "codecentric/common",
          "toggled": true,
        },
        {
          "children": [
            {
              "children": undefined,
              "name": "user",
              "path": "codecentric/db/user",
              "toggled": false,
            },
            {
              "children": undefined,
              "name": "password",
              "path": "codecentric/db/password",
              "toggled": false,
            },
          ],
          "name": "db",
          "path": "codecentric/db",
          "toggled": false,
        },
      ],
      "name": "codecentric",
      "path": "codecentric",
      "toggled": true,
    },
  ],
  "name": "Stores",
  "path": "",
  "toggled": true,
}
`;

exports[`SecretsDirectoryService should transform a list of secret names into tree structure 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": undefined,
                  "name": "password",
                  "path": "codecentric/common/github/password",
                  "toggled": false,
                },
                {
                  "children": undefined,
                  "name": "username",
                  "path": "codecentric/common/github/username",
                  "toggled": false,
                },
              ],
              "name": "github",
              "path": "codecentric/common/github",
              "toggled": false,
            },
            {
              "children": [
                {
                  "children": undefined,
                  "name": "password",
                  "path": "codecentric/common/gitlab/password",
                  "toggled": false,
                },
                {
                  "children": undefined,
                  "name": "username",
                  "path": "codecentric/common/gitlab/username",
                  "toggled": false,
                },
              ],
              "name": "gitlab",
              "path": "codecentric/common/gitlab",
              "toggled": false,
            },
          ],
          "name": "common",
          "path": "codecentric/common",
          "toggled": false,
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": undefined,
                  "name": "notes",
                  "path": "codecentric/customers/some/notes",
                  "toggled": false,
                },
              ],
              "name": "some",
              "path": "codecentric/customers/some",
              "toggled": false,
            },
          ],
          "name": "customers",
          "path": "codecentric/customers",
          "toggled": false,
        },
      ],
      "name": "codecentric",
      "path": "codecentric",
      "toggled": true,
    },
  ],
  "name": "Stores",
  "path": "",
  "toggled": true,
}
`;
